2004-08-30  Bruno Haible  <bruno@clisp.org>

	* benchmarks/timebench2.sh: Multiply all repeat counts by 100.
	* benchmarks/timebench2.results: Add recent PowerPC G4 results.

2004-08-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* examples/e.cc: remove extra semicolon.

2004-08-25  Bruno Haible  <bruno@clisp.org>

	* autoconf/ltmain.sh: Upgrade to libtool-1.5.6.
	* m4/libtool.m4: New file, from libtool-1.5.6 with modifications:
	2004-08-22  Bruno Haible  <bruno@clisp.org>
		* m4/libtool.m4: Add support for Comeau C++ on Linux.
		Reported by Prof. Roberto Bagnara <bagnara@cs.unipr.it>.
	* autoconf/aclocal.m4: Regenerate.

2004-08-19  Bruno Haible  <bruno@clisp.org>

	* include/cln/modules.h (CL_GLOBALIZE_JUMP_LABEL, CL_JUMP_TO): When
	converting a label to a string, use ASM_UNDERSCORE_PREFIX. Needed on
	MacOS X.
	Reported by Darren Bane <darren.bane@ul.ie>.

2004-07-01  Richard B. Kreckel  <kreckel@ginac.de>

	* Version 1.1.8 released.

2004-06-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* src/base/cl_macros.h: alloca(3) has size_t argument type.

2004-06-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* include/cln/floatformat.h: Do define a type here.

2004-06-27  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/modules.h (CL_JUMP_TO): Fix AMD64 brokenness.

2004-06-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Pretend ftime() is not available. Needed by
	CL_TIMES_CLOCK.

2004-06-21  Ralf Stephan  <ralf@ark.in-berlin.de>

	* doc/cln.tex: Document jacobi, isprobprime and nextprobprime.

2004-06-18  Richard B. Kreckel  <kreckel@ginac.de>

	* rational/transcendental/cl_RA_logp.cc: fix bug where base is
	reciprocal of an integer.
	Reported by Niklas Knutsson <nq@altern.org>.

2004-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* src/complex/ring/cl_C_ring.cc, src/integer/ring/cl_I_ring.cc,
	src/rational/ring/cl_RA_ring.cc, src/real/ring/cl_R_ring.cc:
	Make template specializations explicit.

2004-06-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>